--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <table>
                 <tr>
                     <td>
-                    <img class="oprugica"src="img\PROFILNA.jpg" alt="slika"></td>
+                    <img class="oprugica"src="img\PROFILNA.JPG" alt="slika"></td>
                     <th><div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" style="text-align: center"><p>Moje ime je Filip Vujčić, rođen sam 16.05.1996 u Zagrebu a trenutno boravim u Varaždinu dok mi je stalna adresa u Đurđevcu.<br> Završio sam opću gimnaziju dr. Ivana Kranjčeva u Đurđevcu a trenutno završavam treću godinu studija Multimedija, oblikovanje i primjena na Sveučilištu Sjever</p></div></th>
                     </tr>
 
