--- a/mojiradovi.html
+++ b/mojiradovi.html
@@ -83,21 +83,21 @@
         <h3 align="center" >Fotografije</h3>
 <div class="row"> 
   <div class="column">
-    <img src="img\2.jpg" style="width:100%">
-    <img src="img\4.jpg" style="width:100%">    
+    <img src="img\2.JPG" style="width:100%">
+    <img src="img\4.JPG" style="width:100%">    
   </div> 
  <div class="column">
-    <img src="img\1.jpg" style="width:100%">
-    <img src="img\3.jpg" style="width:100%">    
+    <img src="img\1.JPG" style="width:100%">
+    <img src="img\3.JPG" style="width:100%">    
   </div>
 
 <div class="column">
     <img src="img\5.jpg" style="width:100%">
-    <img src="img\7.jpg" style="width:100%">
+    <img src="img\7.JPG" style="width:100%">
 </div>
 <div class="column">
-    <img src="img\6.jpg" style="width:100%">
-    <img src="img\8.jpg" style="width:100%">    
+    <img src="img\6.JPG" style="width:100%">
+    <img src="img\8.JPG" style="width:100%">    
   </div>
   </div>
 <h3 align="center">Časopis "Naš prozor u svijet (kliknite na sliku za cijeli časopis)"</h3>
